log
Thu Apr 21 11:32:57 HSP 2022: 
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4a57427
Thu Apr 21 11:33:10 HSP 2022: 
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b61261a
Thu Apr 21 11:38:50 HSP 2022: 
 tests:  1|8
total_score: 0/70
4861d4a
Thu Apr 21 11:39:40 HSP 2022: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  8|7
total_score: 10/70
d3a2683
Thu Apr 21 15:53:35 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:40:14: error: unused variable 'aux' [-Werror=unused-variable]
   40 |     TreeMap *aux=(TreeMap*) malloc(sizeof(TreeNode));
      |              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
0ced6b3
Fri Apr 22 02:45:20 HSP 2022: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
2c3f94d
Fri Apr 22 03:36:14 HSP 2022: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:49:41: error: 'return' with a value, in function returning void [-Werror=return-type]
   49 |     if (tree==NULL || key==NULL) return NULL;
      |                                         ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:54:17: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   54 |             if( tree->current->right=NULL){
      |                 ^~~~
treemap.c:64:17: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   64 |             if( tree->current->left=NULL){
      |                 ^~~~
treemap.c:71:21: error: 'return' with a value, in function returning void [-Werror=return-type]
   71 |         else return NULL;
      |                     ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
db01ea8
Fri Apr 22 03:47:08 HSP 2022: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:55:21: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   55 |                 if( tree->current->right=NULL){
      |                     ^~~~
treemap.c:63:67: error: expected ';' before '{' token
   63 |             else (tree->lower_than(tree->current->pair->key, key))
      |                                                                   ^
      |                                                                   ;
   64 |             {
      |             ~                                                      
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3b09903
Fri Apr 22 03:52:29 HSP 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:55:21: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   55 |                 if( tree->current->right=NULL){
      |                     ^~~~
treemap.c:65:21: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   65 |                 if( tree->current->left=NULL){
      |                     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e820c2c
Fri Apr 22 03:53:49 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:55:21: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   55 |                 if( tree->current->right=NULL){
      |                     ^~~~
treemap.c:65:21: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   65 |                 if( tree->current->left=NULL){
      |                     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d61f837
Fri Apr 22 17:19:29 HSP 2022: 
 treemap.c | 28 ++++++++++++++--------------
 1 file changed, 14 insertions(+), 14 deletions(-)
 tests:  11|6
total_score: 15/70
ccb1931
Fri Apr 22 17:22:49 HSP 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  11|6
total_score: 15/70
b330dda
Fri Apr 22 17:32:35 HSP 2022: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  11|6
total_score: 15/70
0341447
Fri Apr 22 17:37:46 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
f0e303c
Fri Apr 22 17:55:27 HSP 2022: 
 treemap.c | 38 ++++++++++++++++++++++++--------------
 1 file changed, 24 insertions(+), 14 deletions(-)
 tests:  13|5
total_score: 25/70
1306880
Fri Apr 22 18:03:20 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function 'minimum':
treemap.c:91:16: error: 'left' undeclared (first use in this function)
   91 |         if(aux>left==NULL) return aux;
      |                ^~~~
treemap.c:91:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
2a4569a
Fri Apr 22 18:03:43 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function 'minimum':
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
149b437
Fri Apr 22 18:04:53 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
300b467
Fri Apr 22 23:29:47 HSP 2022: 
 treemap.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:136:20: error: passing argument 1 of 'remove' from incompatible pointer type [-Werror=incompatible-pointer-types]
  136 |             remove(aux);
      |                    ^~~
      |                    |
      |                    TreeNode * {aka struct TreeNode *}
In file included from test.c:1:
c:\mingw\x86_64-w64-mingw32\include\stdio.h:721:34: note: expected 'const char *' but argument is of type 'TreeNode *' {aka 'struct TreeNode *'}
  721 |   int __cdecl remove(const char *_Filename);
      |                      ~~~~~~~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fe7a777
Fri Apr 22 23:32:53 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d246859
Fri Apr 22 23:34:00 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a87d38
Fri Apr 22 23:46:07 HSP 2022: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:131:33: error: expected ';' before 'node'
  131 |             node->left=aux->left
      |                                 ^
      |                                 ;
  132 |             node->pair= aux->pair;
      |             ~~~~                 
Compilation failed
bb89625
Fri Apr 22 23:47:45 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
1a31b1b
Fri Apr 22 23:53:29 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ba5b745
Fri Apr 22 23:58:28 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
9787abf
Fri Apr 22 23:59:17 HSP 2022: 
 treemap.c | 46 ----------------------------------------------
 1 file changed, 46 deletions(-)
 tests:  15|4
total_score: 25/70
1b878f6
